# src/auth/auth.controller.ts
@@ -1,16 +1,27 @@
-import { Body, Controller, Get, Post, Query, Req, Res, UseGuards } from "@nestjs/common";
-import { Request, Response } from "express";
-import { LocalGuard } from "./guards/localAuth.guard";
-import { ApiBody, ApiOperation, ApiResponse, ApiTags } from "@nestjs/swagger";
-import { Profile, ProfileDocument } from "src/profiles/schema/profile.schema";
-import { AuthService, ITokens } from "./auth.service";
-import { AuthDtoPipe } from "./pipe/auth-dto.pipe";
-import { YandexGuard } from "./guards/yandex.guards";
-import { HttpService } from "@nestjs/axios";
-import { mergeMap } from "rxjs";
-import { CombinedDto } from "./dto/combined.dto";
-import TypeAccount from "../accounts/types/type-account";
+import {
+  Body,
+  Controller,
+  Get,
+  Post,
+  Query,
+  Req,
+  Res,
+  UseGuards,
+} from '@nestjs/common';
+import { Request, Response } from 'express';
+import { LocalGuard } from './guards/localAuth.guard';
+import { ApiBody, ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { Profile, ProfileDocument } from 'src/profiles/schema/profile.schema';
+import { AuthService, ITokens } from './auth.service';
+import { AuthDtoPipe } from './pipe/auth-dto.pipe';
+import { YandexGuard } from './guards/yandex.guards';
+import { HttpService } from '@nestjs/axios';
+import { mergeMap } from 'rxjs';
+import { CombinedDto } from './dto/combined.dto';
+import TypeAccount from '../accounts/types/type-account';
+import { TelegramWebAppAuthGuard } from './guards/telegram.guard';
 
+//auth.controller.ts
 interface RequestProfile extends Request {
   user: ProfileDocument;
 }
@@ -364,6 +375,15 @@ export class AuthController {
           return this.authService.authSocial(authDto, TypeAccount.YANDEX);
         }),
       );
+  }
+
+  @UseGuards(TelegramWebAppAuthGuard)
+  @Get('telegram/callback')
+  async telegramCallback(@Req() req) {
+    console.log(req.user);
+    const url = 'http://localhost:3000/telegram/callback';
+    // req.user будет содержать данные пользователя после успешной авторизации
+    return req.user;
   }
 
   @Post('reset-password')
